Fix name wrapping for longer names

--- a/styles/style.css
+++ b/styles/style.css
@@ -206,6 +206,6 @@ a {
   }
   .widget h3 {
     margin: 0;
-    font-size: 14px;
+    font-size: 11px;
   }
 }
